// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Analysis Builder render 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex flex-column"
  >
    <section
      aria-labelledby=":r0:"
      class="event-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r0:"
          >
            Analyze
          </span>
        </h3>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add Event"
            class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
            title="Add Event"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Event Analysis Builder render with filters & breakdowns 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex flex-column"
  >
    <section
      aria-labelledby=":r1:"
      class="event-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r1:"
          >
            Analyze
          </span>
        </h3>
      </div>
      <div
        class="event-container event-list mt-3"
      >
        <div
          class="dropdown"
        >
          <div
            class="chip-root d-flex align-items-center justify-content-between event-chip-root"
          >
            <button
              class="button-root event-name btn btn-unstyled"
              type="button"
            >
              Article Views
            </button>
            <button
              aria-label="Close"
              class="button-root remove-button btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-circle icon-root"
                role="presentation"
              >
                <use
                  href="#times-circle"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </section>
    <section
      aria-labelledby=":r2:"
      class="attribute-breakdown-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r2:"
          >
            Breakdown By
          </span>
        </h3>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add Breakdown"
            class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
            title="Add Breakdown"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
    <section
      aria-labelledby=":r3:"
      class="attribute-filter-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r3:"
          >
            Filter By
          </span>
        </h3>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add Filter"
            class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
            title="Add Filter"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;
